fix: gradient blur z-index

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,7 +27,7 @@
   border-radius: 24px;
 }
 
-html,
+/* html, */
 body {
   background: #000000 !important;
   color: #fff !important;
